--- a/02_Visualization/day06_data_OWID/literacy.ipynb
+++ b/02_Visualization/day06_data_OWID/literacy.ipynb
@@ -3,10 +3,96 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c6a6e0c-1e3a-4b21-ab87-8858b0aef584",
+   "id": "b1de612e-878c-4a06-892b-0e9b46be171b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Leer el archivo CSV que contiene las tasas de alfabetización / Read the CSV file containing literacy rates\n",
+    "df = pd.read_csv('literacy-rates-of-the-the-younger-population-15-24-years-versus-literacy-rates-of-the-older-population-65.csv')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8df7831-8b30-4d0d-90ba-8130d78de1e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliminar filas con valores nulos en las columnas de tasas de alfabetización de mayores, jóvenes o población /\n",
+    "# Remove rows that have NaN values for elderly literacy rate, youth literacy rate, or population\n",
+    "df = df[df['Elderly literacy rate, population 65+ years, both sexes (%)'].notnull()]\n",
+    "df = df[df['Youth literacy rate, population 15-24 years, both sexes (%)'].notnull()]\n",
+    "df = df[df['Population (historical estimates)'].notnull()]\n",
+    "\n",
+    "# Filtrar solo los datos a partir del año 2010 / Filter data for years >= 2010\n",
+    "df = df[df['Year'] >= 2010]\n",
+    "\n",
+    "# Establecer un estilo visual blanco para los gráficos / Set a white background theme for the plots\n",
+    "sns.set_theme(style=\"white\")\n",
+    "\n",
+    "# Crear un gráfico de dispersión relacionando las tasas de alfabetización de jóvenes y mayores /\n",
+    "# Create a scatter plot relating youth and elderly literacy rates\n",
+    "# Cada gráfico estará separado por continente, se usa el tamaño de la población histórica para el tamaño de los puntos /\n",
+    "# Each plot will be separated by continent, using population size for point size\n",
+    "ax = sns.relplot(\n",
+    "    x='Youth literacy rate, population 15-24 years, both sexes (%)',\n",
+    "    y='Elderly literacy rate, population 65+ years, both sexes (%)',\n",
+    "    hue=\"Entity\",  # Colorear los puntos según el país / Color the points by country\n",
+    "    size=\"Population (historical estimates)\",  # El tamaño del punto según la población / Point size based on historical population\n",
+    "    col=\"Continent\",  # Crear un gráfico por continente / Create a plot for each continent\n",
+    "    col_wrap=3,  # Limitar el número de gráficos por fila / Limit the number of plots per row\n",
+    "    sizes=(800, 1200), alpha=.5, palette=\"muted\",  # Tamaño y transparencia de los puntos / Point size and transparency\n",
+    "    height=6,  # Tamaño de cada gráfico / Height of each plot\n",
+    "    aspect=1.0,  # Proporción del gráfico / Aspect ratio of the plot\n",
+    "    data=df  # Usar el DataFrame filtrado / Use the filtered DataFrame\n",
+    ")\n",
+    "\n",
+    "# Mover la leyenda a la parte superior central del gráfico / Move the legend to the upper center of the plot\n",
+    "ax2 = sns.move_legend(\n",
+    "    ax, \"upper center\", \n",
+    "    bbox_to_anchor=(.5, 0), ncol=8, title=\"Countries\", frameon=False\n",
+    ")\n",
+    "\n",
+    "# Ajustar el título global del gráfico para que no se sobreponga con los gráficos / Adjust the global title so it doesn't overlap with the plots\n",
+    "ax.fig.subplots_adjust(top=.8)\n",
+    "ax.fig.suptitle('Literacy Rates: Younger vs Older Generation', fontsize=30)\n",
+    "\n",
+    "# Añadir texto explicativo debajo del título principal / Add explanatory text below the main title\n",
+    "ax.fig.text(0.02, 0.90,\n",
+    "    \"In every country, for 2010-2016, the younger population (those aged \" + \\\n",
+    "    \"15-24) have higher or equal literacy rates than the older population\",\n",
+    "    ha=\"left\",  # Alineación horizontal a la izquierda / Left horizontal alignment\n",
+    "    fontsize=18\n",
+    ")\n",
+    "\n",
+    "# Añadir texto adicional para completar la explicación / Add additional text to complete the explanation\n",
+    "ax.fig.text(0.02, 0.87,\n",
+    "    \"(those aged 65 and older).\",\n",
+    "    ha=\"left\",  # Alineación horizontal a la izquierda / Left horizontal alignment\n",
+    "    fontsize=18\n",
+    ")\n",
+    "\n",
+    "# Añadir pie de página con los créditos de los datos y la visualización / Add footer with data and visualization credits\n",
+    "ax.fig.text(0.02,\n",
+    "    -0.36,\n",
+    "    \"Data: https://ourworldindata.org/literacy   Viz: @roannav\",\n",
+    "    ha=\"left\",  # Alineación horizontal a la izquierda / Left horizontal alignment\n",
+    "    fontsize=12\n",
+    ")\n",
+    "\n",
+    "# Eliminar las etiquetas de los ejes X e Y para cada gráfico y agregar etiquetas globales / Remove X and Y labels for each plot and add global labels\n",
+    "ax.set(xlabel=\"\")\n",
+    "ax.fig.supxlabel('Youth literacy rate, population 15-24 years, both sexes (%)', fontsize=16)\n",
+    "ax.set(ylabel=\"\")\n",
+    "ax.fig.supylabel('Elderly literacy rate, population 65+ years, both sexes (%)', fontsize=16)\n",
+    "\n",
+    "# Guardar la figura generada en un archivo PNG / Save the generated figure in a PNG file\n",
+    "ax.fig.savefig('fig.png', bbox_inches='tight')  # Asegura que la leyenda y el pie de página no se corten / Ensures legend and footer aren't cut off"
+   ]
   }
  ],
  "metadata": {
