--- a/02_Visualization/day06_data_OWID/literacy.ipynb
+++ b/02_Visualization/day06_data_OWID/literacy.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4df71d3-62f9-4338-8d87-770cd24bec1e",
+   "id": "3c6a6e0c-1e3a-4b21-ab87-8858b0aef584",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11,11 +11,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
